--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # OracleDB connection settings
-spring.datasource.url=jdbc:oracle:thin:@10.8.18.110:1521:cvmt
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:cvmt
 spring.datasource.username=IBM_AT
-spring.datasource.password=Lx1T3#mr34$RMN
+spring.datasource.password=12344556
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # JPA settings
